// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useCategoryContent tests handles no data prop 1`] = `
Object {
  "availableSortMethods": Array [
    Object {
      "attribute": "price",
      "id": "sortItem.priceAsc",
      "sortDirection": "ASC",
      "text": "Price: Low to High",
    },
    Object {
      "attribute": "price",
      "id": "sortItem.priceDesc",
      "sortDirection": "DESC",
      "text": "Price: High to Low",
    },
  ],
  "categoryDescription": "Jewelry category",
  "categoryName": "Jewelry",
  "filters": null,
  "items": Array [
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
  ],
  "totalCount": null,
  "totalPagesFromData": null,
}
`;

exports[`useCategoryContent tests returns the proper shape 1`] = `
Object {
  "availableSortMethods": Array [
    Object {
      "attribute": "price",
      "id": "sortItem.priceAsc",
      "sortDirection": "ASC",
      "text": "Price: Low to High",
    },
    Object {
      "attribute": "price",
      "id": "sortItem.priceDesc",
      "sortDirection": "DESC",
      "text": "Price: High to Low",
    },
  ],
  "categoryDescription": "Jewelry category",
  "categoryName": "Jewelry",
  "filters": null,
  "items": Array [
    Object {
      "id": 1,
      "name": "Ring",
    },
    Object {
      "id": 2,
      "name": "Necklace",
    },
  ],
  "totalCount": 2,
  "totalPagesFromData": 1,
}
`;
